--- a/index-styles.css
+++ b/index-styles.css
@@ -2,16 +2,8 @@
   box-sizing: border-box;
 }
 
-.flex-container {
-  display: flex;
-}
-
 body {
-  width: 1280px;
-  height: 100vh;
-  margin: auto;
-  font-family: Montserrat, Verdana, Arial, Helvetica, sans-serif;
-  background-color: whitesmoke;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Style the header */
